[project]
name = "ekw-pobieracz-mapaaspen"
version = "0.1.0"
description = "Secrets-free Polish EKW land-register fetcher using WebShare, Camoufox and 2Captcha"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "camoufox>=0.4",
  "playwright>=1.45",
]

[tool.ruff]
line-length = 120
